Updated about me

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<!-- HTML Codes by Quackit.com -->
+<title>
+Brandyn Reindel</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="Brandyn Reindel, Software Engineer, ">
+<meta name="description" content="Brandyn Reindel Software Engineer">
+<style>
+body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
+p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+</style>
+</head>
+<body>
+<h1>Brandyn Reindel</h1>
+<p>I’m a software engineer finishing up my Second Year Specialization in AR/VR at Holberton School. Currently I am working on developing an augmented reality mobile app “Tetris IRL”. It’s a 3D Tetris style game that lets the user put play and interact with the game pieces in the world around them. As a software engineering I am most fluent in Unity and C#, which is a direct result of my passion for video games and the technologies used to create them.</p>
+<p>	Before starting my journey as a software engineer I have had a very unique and diverse background. Prior to finding my way to Holberton I have worked as a custom woodworker and carpenter, as well as a successful sales manager in big box retail stores. When I began my time in retail I was hired as a seasonal  home theater employee, and I found I had a real knack for connecting with the customers and finding the best solutions for the home entertainment needs. I knew I wanted to work my way up in the company and reach my highest potential, but I never thought I could achieve it as quickly as I did. I managed to work my way up from seasonal employee to Sales Floor Manager in just under a year, something that no one else in our district had ever achieved. I was now in position to not only help customers, but to help all of the people that worked with through coaching and training and helping them to be the best versions of themselves. This ambition of bettering myself and taking on challenges is what eventually led me to attend Holberton. I knew I wanted more for myself, and although it was a scary decision to switch careers, through hard work and dedication I knew that I could achieve any goals I set for myself.</p>
+<p>	Self-improvement has always been the driving force behind any challenges I have taken on in my life. My motivation to be the best version of myself not only helps me to look at every challenge as a growing and learning opportunity, but I believe it impacts those around me. Whenever I work with others I push them to strive for the same personal growth and success. I believe that when everyone on a team is working towards being the best versions of themselves you get the best possible version of that team.</p>
+<p></p>
+</body>
+</html>
+
