--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Brandyn Reindel</title>
 <meta name="keywords" content="Brandyn Reindel, Software Engineer, ">
 <meta name="description" content="Brandyn Reindel Software Engineer">
 <style>
-body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+body {background-color:#afb6d4;background-image:url(https://depositphotos.com/stock-photos/website-background.html?filter=all&utm_source=google&utm_medium=cpc&utm_campaign=DP_USA_EN_Generic_Search&utm_term=website+background+images&qview=39803655);background-repeat:no-repeat;background-position:top left;background-attachment:scroll;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
 </style>
@@ -21,4 +21,3 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 <p></p>
 </body>
 </html>
-
