Centered text and added bg image

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ Brandyn Reindel</title>
 <meta name="keywords" content="Brandyn Reindel, Software Engineer, ">
 <meta name="description" content="Brandyn Reindel Software Engineer">
 <style>
-body {background-color:#afb6d4;background-image:url(https://depositphotos.com/stock-photos/website-background.html?filter=all&utm_source=google&utm_medium=cpc&utm_campaign=DP_USA_EN_Generic_Search&utm_term=website+background+images&qview=39803655);background-repeat:no-repeat;background-position:top left;background-attachment:scroll;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+body {background-color:#000000;background-image:url(https://github.com/BrandynR/BrandynR.github.io/blob/main/background.png);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+h1{text-align:center;font-family:Arial, sans-serif;color:#e4e2e2;background-color:#ffffff;}
+p {text-align:center;font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#ffffff;background-color:#ffffff;}
 </style>
 </head>
 <body>
