ADD updated bio section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Brandyn Reindel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -48,9 +48,12 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>DuckHunt 2020: An Augmented Adventure</h2>
+							<p>Created by Brandyn Reindel.<br />
+							A portfolio project for Holberton School AR/VR Specialization.</p>
+							<p>DuckHunt 2020: An Augmented Adventure is the brainchild of creator and solo developer Brandyn Reindel.<br />
+								Brandyn worked tirelessly on this game, selecting assets, designing the terrain, and writing the code to build the project you see before you.<br />
+								I hope you enjoy it!</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -65,23 +68,20 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Who Am I?</h2>
+										<p>Brandyn Reindel: Software Engineer, Unity Developer, All Around Nice Guy!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>I am a Full-Stack Software Engineer. I attended Holberton School New Haven, and just completed a second year specialization in AR/VR (Graduated January 2021).
+									In March of 2020 I completed the rigorous , fast-paced foundations curriculum at Holberton School. 
+									Where I was taught not just what to learn, but how to learn, through peer learning and a full-stack project-based curriculum.
+									Holberton has given me the skills to not only be a great software engineer, but a great team member.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>DuckHunt 2020: An Augmented Adventure is the brainchild of creator and solo developer Brandyn Reindel.
+									Brandyn worked tirelessly on this game, individually selecting assets, designing the terrain, and writing the code to build the project you see before you.
+									I hope you enjoy it!</p>
 								</div>
 							</div>
 						</div>
