--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">Brandyn Reindel</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Connect</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
+									<li><a href="https://github.com/BrandynR">GitHub</a></li>
+									<li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
+									<li><a href="https://brandyn-reindel.medium.com/">Medium</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Games I've Made</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="https://sharemygame.com/@BrandynR/2d-clone-tetris">Tetris Clone</a></li>
+											<li><a href="https://sharemygame.com/@BrandynR/space-escape-v2">Space Escape</a></li>
+											<li><a href="#">Others</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#" class="button primary">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -55,7 +55,7 @@
 								Brandyn worked tirelessly on this game, selecting assets, designing the terrain, and writing the code to build the project you see before you.<br />
 								I hope you enjoy it!</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/profilepic.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
