ADD  images to update page

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>I am a Full-Stack Software Engineer. I attended Holberton School New Haven, and just completed a second year specialization in AR/VR (Graduated January 2021).
-									In March of 2020 I completed the rigorous , fast-paced foundations curriculum at Holberton School. 
+									<p>I am a Full-Stack Software Engineer. I attended Holberton School in New Haven, CT, and completed a second year specialization in AR/VR and Unity Development (Graduated January 2021).
+									In March of 2020 I completed the rigorous, fast-paced foundations curriculum at Holberton School. 
 									Where I was taught not just what to learn, but how to learn, through peer learning and a full-stack project-based curriculum.
 									Holberton has given me the skills to not only be a great software engineer, but a great team member.</p>
 								</div>
@@ -91,8 +91,10 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/Tetris.png" alt="" /></span>
+					
 					<div class="content">
+						
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
 							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
@@ -113,7 +115,7 @@
 							<h2>Interdum felis blandit praesent sed augue</h2>
 							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Tetris 2D Cl  wehlkjkhjbwefkhbsdkhfbwefkhbwekfhbsdkcj,befliuk.jsaf,hbkrjgv,sa/dlbvone</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
