ADD tetris page

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>DuckHunt 2020: An Augmented Adventure</h2>
-							<p>Created by Brandyn Reindel.<br />
-							A portfolio project for Holberton School AR/VR Specialization.</p>
-							<p>DuckHunt 2020: An Augmented Adventure is the brainchild of creator and solo developer Brandyn Reindel.<br />
-								Brandyn worked tirelessly on this game, selecting assets, designing the terrain, and writing the code to build the project you see before you.<br />
-								I hope you enjoy it!</p>
+							<h2>Brandyn Reindel</h2>
+							<p>- Software Engineer -<br />
+							- Unity Developer -<br />
+							- AR/VR Specialist -</p>
+							<p></p>
 						</header>
 						<span class="image"><img src="images/profilepic.jpg" alt="" /></span>
 					</div>
@@ -69,7 +68,10 @@
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>Who Am I?</h2>
-										<p>Brandyn Reindel: Software Engineer, Unity Developer, All Around Nice Guy!</p>
+										<p>Brandyn Reindel:<br />
+										-Software Engineer<br />
+										-Unity Developer<br />
+										-All Around Nice Guy!
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -79,9 +81,7 @@
 									Holberton has given me the skills to not only be a great software engineer, but a great team member.</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>DuckHunt 2020: An Augmented Adventure is the brainchild of creator and solo developer Brandyn Reindel.
-									Brandyn worked tirelessly on this game, individually selecting assets, designing the terrain, and writing the code to build the project you see before you.
-									I hope you enjoy it!</p>
+									<p>Born and raised in CT, and currently living in Hamden. I am a fan all things Tech, Augmented and Virtual Reality, and all aspects of Software and Game Development.</p>
 								</div>
 							</div>
 						</div>
@@ -91,17 +91,21 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/Tetris.png" alt="" /></span>
+					<span class="image fit main"><img src="images/DuckHunt2020.png" alt="" /></span>
 					
 					<div class="content">
 						
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>DuckHunt2020:</h2>
+							<p>An Augmented Adeventure</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>For my AR/VR Specialization portfolio project I intended to create a new, modern version of the 1984 Nintendo classic Duck Hunt. 
+							This game was designed to be more immersive and interactive than any other game on the market at the time. And it is a game, that in my opinion, was far ahead of its time.
+							However Duck Hunt has never gained the same success in later releases, as other titles in the Nintendo family.
+							So I built a 21st Century version, that is relevant with today's available technology.
+							</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Test Your Aim</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -109,15 +113,18 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/Tetris.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Tetris</h2>
+							<p>An updated 2D clone of a timeless classic.</p>
 						</header>
-						<p>Tetris 2D Cl  wehlkjkhjbwefkhbsdkhfbwefkhbwekfhbsdkcj,befliuk.jsaf,hbkrjgv,sa/dlbvone</p>
+						<p>Built as an optional project during my AR/VR Specialization at Holberton School.
+							Creating this revamped classic gave me the opportunity explore particle systems and more immersive audio.
+							As well as adding features the original did not have, like holding pieces off to the side.
+						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="tetris.html" class="button">Check It Out</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -127,8 +134,8 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Other Projects I Have Built</h2>
+							<p>Please feel free to take a look at the variety of projects under my belt.</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
