ADD updated intsructions on tetris page

--- a/tetris.html
+++ b/tetris.html
@@ -55,21 +55,27 @@
 									<section id="sidebar">
 										<section>
 											<h3>How to Play:</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<p>- Use the arrow keys to move a game piece left, right, or down.<br />
+												- Up Arrow to rotate a game piece.<br />
+												- '/' to change to the rotation direction.<br />
+												- 'Right Shift' to hold a game piece off to the side, or to recall that piece.<br />
+												- 'Escape' to pause the game.
+												</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="https://github.com/BrandynR/Tetris-2D-Clone" class="button">See the Code</a></li>
 												</ul>
 											</footer>
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<a href="#" class="image fit"><img src="images/SpaceEscape1.png" alt="" /></a>
+											<h3>Space Escape</h3>
+											<p>Try your luck navigating the Rocketship out of this cavern to safety.<br />
+											Complete with 9 Levels of varying difficulty to test your skills and your patience.</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="spaceEscape.html" class="button">Try It Out</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -82,16 +88,22 @@
 									<section id="content">
 										<h3>Tetris 2D Clone</h3>
 										<iframe src="https://i.simmer.io/@BrandynR/2d-clone-tetris?skin=smg" style="width:960px;height:600px;border:0"></iframe>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<p>This remixed clone is my version of a fully functional Tetris clone, with a line counter and progressively faster difficulty.
+										Complete with a pause/restart menu, music and sound effects, and the ability to hold a piece off to the side and call it back, this clone is an updated, refreshing remix of the 80's classic.</p>
+										<p>Building this game gave me a chance to explore particle systems, immersive audio, and animations more in depth.
+										Future builds will include mobile controls and UI for Android and iOS. </p>
+										<p>I chose to make a Tetris Clone because growing up I remember watching my Nana play Tetris on her GameBoy every night before bed.
+										She would call me and my brother over each time she had beaten the game to watch the rocket ship blast off! <br />
+										These early memories of my Nana are some of my favorite, and if she were here I know she would love playing this game that I made this game for her.</p>
+										
+										<h3>How To Play</h3>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li><h5>Move:</h5> Use the 'Arrow' keys to move a game piece left, right, or down.</li><br />
+											<li><h5>Rotate:</h5> Use the 'Up' Arrow to rotate a game piece.</li><br />
+											<li><h5>Speed Up:</h5> Use the 'Down' arrow to speed up the falling piece.</li><br />
+											<li><h5>Change Rotation:</h5> Use the '/' to change to the rotation direction clockwise or counter-clockwise, or hit the on screen button.</li><br />
+											<li><h5>Hold a Piece:</h5> Use the 'Right Shift' to hold a game piece off to the side, or to recall that piece.</li><br />
+											<li><h5>Pause:</h5> Use the 'Escape' key to pause the game, or hit the on screen button.</li>
 										</ul>
 									</section>
 
