--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Landed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Created February 2021 as an updated portfolio showcase. I will continue to add to/maintain as more projects are completed.
 -->
 <html>
 	<head>
