--- a/tetris.html
+++ b/tetris.html
@@ -69,8 +69,9 @@
 										</section>
 										<hr />
 										<section>
+											<h3>Other Games</h3>
 											<a href="#" class="image fit"><img src="images/SpaceEscape1.png" alt="" /></a>
-											<h3>Space Escape</h3>
+											<h4>Space Escape</h4>
 											<p>Try your luck navigating the Rocketship out of this cavern to safety.<br />
 											Complete with 9 Levels of varying difficulty to test your skills and your patience.</p>
 											<footer>
