ADD Updated header navigation bar links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload landing">
+	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -18,29 +18,37 @@
 					<h1 id="logo"><a href="index.html">Brandyn Reindel</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Connect</a>
+								<a href="#">Projects</a>
 								<ul>
-									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
-									<li><a href="https://github.com/BrandynR">GitHub</a></li>
-									<li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
-									<li><a href="https://brandyn-reindel.medium.com/">Medium</a></li>
+									<li><a href="duckHunt.html">DuckHunt2020</a></li>
+									<li><a href="tetris.html">Tetris</a></li>
+									<li><a href="spaceEscape.html">Space Escape</a></li>
 									<li>
-										<a href="#">Games I've Made</a>
+										<a href="https://github.com/BrandynR">GitHub</a>
 										<ul>
-											<li><a href="https://sharemygame.com/@BrandynR/2d-clone-tetris">Tetris Clone</a></li>
-											<li><a href="https://sharemygame.com/@BrandynR/space-escape-v2">Space Escape</a></li>
-											<li><a href="#">Others</a></li>
+											<li><a href="https://github.com/BrandynR/DuckHunt2020-AnARAdventure">DuckHunt2020</a></li>
+											<li><a href="https://github.com/BrandynR/Tetris-2D-Clone">Tetris</a></li>
+											<li><a href="https://github.com/BrandynR/Space_Escape">Space Escape</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
+							<li>
+								<a href="#">Connect</a>
+								<ul>
+									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
+                                    <li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
+									<li><a href="https://github.com/BrandynR">GitHub</a></li>
+								</ul>
+							</li>
+							<li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
 							<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button primary">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
+
 
 			<!-- Banner -->
 				<section id="banner">
