--- a/tetris.html
+++ b/tetris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Tetris 2D Clone</title>
+		<title>Space Escape</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,32 +12,40 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Tetris 2D Clone</a></h1>
+					<h1 id="logo"><a href="index.html">Tetris</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Projects</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="duckHunt.html">DuckHunt2020</a></li>
+									<li><a href="tetris.html">Tetris</a></li>
+									<li><a href="spaceEscape.html">Space Escape</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="https://github.com/BrandynR">GitHub</a>
 										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
+											<li><a href="https://github.com/BrandynR/DuckHunt2020-AnARAdventure">DuckHunt2020</a></li>
+											<li><a href="https://github.com/BrandynR/Tetris-2D-Clone">Tetris</a></li>
+											<li><a href="https://github.com/BrandynR/Space_Escape">Space Escape</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
+							<li>
+								<a href="#">Connect</a>
+								<ul>
+									<li><a href="https://www.linkedin.com/in/brandynreindel/">LinkedIn</a></li>
+                                    <li><a href="https://twitter.com/Optimus_is_Me">Twitter</a></li>
+									<li><a href="https://github.com/BrandynR">GitHub</a></li>
+								</ul>
+							</li>
+							<li><a href="mailto:brandyn.reindel@gmail.com">Email Me</a></li>
 							<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button primary">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
+
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
