ADD upfated header links

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 							<h2>DuckHunt2020:</h2>
 							<p>An Augmented Adeventure</p>
 						</header>
-						<p>For my AR/VR Specialization portfolio project I intended to create a new, modern version of the 1984 Nintendo classic Duck Hunt. 
-							This game was designed to be more immersive and interactive than any other game on the market at the time. And it is a game, that in my opinion, was far ahead of its time.
-							However Duck Hunt has never gained the same success in later releases, as other titles in the Nintendo family.
-							So I built a 21st Century version, that is relevant with today's available technology.
+						<p>For my AR/VR Specialization portfolio project I intended to create a new, modern version of the 1984 Nintendo classic Duck Hunt.</p>
+						<p>This game was designed to be more immersive and interactive than any other game on the market at the time. And it is a game, that in my opinion, was far ahead of its time.
+							However Duck Hunt has never gained the same success in later releases, as other titles in the Nintendo family.</p>
+						<p>So I built a 21st Century version, that is relevant with today's available technology.</p>
 							</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Test Your Aim</a></li>
