ADD new background image to index.html

--- a/index.html
+++ b/index.html
@@ -67,23 +67,24 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/code.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
 										<h2>Who Am I?</h2>
-										<p>Brandyn Reindel:<br />
+										<p><h3>Brandyn Reindel:</h3>
 										-Software Engineer<br />
 										-Unity Developer<br />
-										-All Around Nice Guy!
+										-All Around Nice Guy!</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>I am a Full-Stack Software Engineer. I attended Holberton School in New Haven, CT, and completed a second year specialization in AR/VR and Unity Development (Graduated January 2021).
+									<p>I am a Full-Stack Software Engineer. I attended Holberton School in New Haven, CT, and completed a second year specialization in AR/VR and Unity Development (Graduated January 2021).<br />
 									In March of 2020 I completed the rigorous, fast-paced foundations curriculum at Holberton School. 
-									Where I was taught not just what to learn, but how to learn, through peer learning and a full-stack project-based curriculum.
+									Where I was taught not just what to learn, but how to learn.<br />
+									Through peer learning and a full-stack project-based curriculum,
 									Holberton has given me the skills to not only be a great software engineer, but a great team member.</p>
 								</div>
 								<div class="col-4 col-12-medium">
