ADD update index.html footer 'skills' section

--- a/index.html
+++ b/index.html
@@ -138,55 +138,74 @@
 				</section>
 
 			<!-- Four -->
+			<section id="two" class="spotlight style2 right">
+				<span class="image fit main bottom"><img src="images/SpaceEscape1.png" alt="" /></span>
+				<div class="content">
+					<header>
+						<h2>Space Escape</h2>
+						<p>Navigate the Rocketship to safety.</p>
+					</header>
+					<p>Space Escape is one of the very first games I built and shared when being introduced to Unity.<br />
+						Building this game gave me a chance to introduce particle systems, in game physics, animations and more.
+						Future builds will include mobile controls and UI for Android and iOS. </p>
+					<ul class="actions">
+						<li><a href="spaceEscape.html" class="button">Try Your Luck</a></li>
+					</ul>
+				</div>
+				<a href="#four" class="goto-next scrolly">Next</a>
+			</section>
+
+			<!-- Five -->
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Other Projects I Have Built</h2>
-							<p>Please feel free to take a look at the variety of projects under my belt.</p>
+							<h2>What I Bring to the Table</h2>
+							<p>Please feel free to take a look at the variety of projects under my belt, and<br />
+							Don't hesitate to reach out and connect with me!</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Problem Solving</h3>
+									<p>The ability to think outside of the box, as well look at a problem logically.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Communication</h3>
+									<p>Fantastic verbal and written communication. As well as interpersonal skills.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Results</h3>
+									<p>Determination and perseverance allow me to overcome any obstacles in my way.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Time Management</h3>
+									<p>Well organized and detailed when mapping out a project or completing tasks for the day.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Coachable</h3>
+									<p>Continously looking to expand my knowledge and skills.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Reliable</h3>
+									<p>Whether it is meeting a deadline, or going the extra mile to complete a project, you can count on me.</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button">My Resume</a></li>
 							</ul>
 						</footer>
 					</div>
 				</section>
 
-			<!-- Five -->
+			<!-- Six -->
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
