--- a/spaceEscape.html
+++ b/spaceEscape.html
@@ -95,7 +95,7 @@
 									<section id="content">
 										<h2>Space Escape</h2>
 										<iframe src="https://i.simmer.io/@BrandynR/space-escape-v2?skin=smg" style="width:960px;height:600px;border:0"></iframe>
-                                        <p>The Rocketship was navigating a cave system on a distant planet, when it gets lost.
+                                        <p>This Rocketship was navigating a cave system on a distant planet, when it gets lost.
                                         Now it is up to you take the controls and fly your Rocketship to safety.</p>
 										<p>Space Escape is one of the very first games I built and shared when being introduced to Unity.<br />
                                         Building this game gave me a chance to introduce particle systems, in game physics, animations and more.
