--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 					<div class="container">
 						<header class="major">
 							<h2>What I Bring to the Table</h2>
-							<p>Please feel free to take a look at the variety of projects under my belt, and<br />
-							Don't hesitate to reach out and connect with me!</p>
+							<p>Please feel free to take a look at the variety of projects under my belt,<br />
+							And don't hesitate to reach out and connect with me!</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
@@ -222,19 +222,17 @@
 				</section>
 
 			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://twitter.com/Optimus_is_Me" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.linkedin.com/in/brandynreindel/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/BrandynR" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:brandyn.reindel@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Brandyn Reindel. All rights reserved.</li>
+				</ul>
+			</footer>
 
 		</div>
 
