--- a/spaceEscape.html
+++ b/spaceEscape.html
@@ -125,7 +125,7 @@
 						<li><a href="mailto:brandyn.reindel@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Brandyn Reindel. All rights reserved.</li>
 					</ul>
 				</footer>
 
