ADD email box above footer

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Want to Connect Directly?</h2>
+							<p>Send me an email to discuss code, collaboration, or employment opportunities.</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
