ADD github link to section 5

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>What I Bring to the Table</h2>
-							<p>Please feel free to take a look at the variety of projects under my belt,<br />
+							<p>Please feel free to explore the variety of projects under my belt,<br />
 							And don't hesitate to reach out and connect with me!</p>
 						</header>
 						<div class="box alt">
@@ -200,6 +200,7 @@
 						<footer class="major">
 							<ul class="actions special">
 								<li><a href="https://www.dropbox.com/s/r064t7hj8tm8tgn/Brandyn%20Reindel-Software%20Engineer%20%28Feb.%202021%29.pdf?dl=0" class="button">My Resume</a></li>
+								<li><a href="https://github.com/BrandynR" class="button">My Code</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -209,13 +210,14 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Want to Connect Directly?</h2>
-							<p>Send me an email to discuss code, collaboration, or employment opportunities.</p>
+							<h2>Want to Connect With Me Directly?</h2>
+							<p>Send me an email to discuss code, collaborations, or employment opportunities.</p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="post" action="mailto:brandyn.reindel@gmail.com" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<!--<li><a href="mailto:brandyn.reindel@gmail.com" class="button primary">Get In Touch</a></li>-->
 							</div>
 						</form>
 					</div>
