ADD created DuckHunt landing page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<p>So I built a 21st Century version, that is relevant with today's available technology.</p>
 							</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Test Your Aim</a></li>
+							<li><a href="duckHunt.html" class="button">Test Your Aim</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
