--- a/tetris.html
+++ b/tetris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Space Escape</title>
+		<title>Tetris 2D Clone</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -78,7 +78,7 @@
 										<hr />
 										<section>
 											<h3>Other Games</h3>
-											<a href="#" class="image fit"><img src="images/SpaceEscape1.png" alt="" /></a>
+											<a href="spaceEscape.html" class="image fit"><img src="images/SpaceEscape1.png" alt="" /></a>
 											<h4>Space Escape</h4>
 											<p>Try your luck navigating the Rocketship out of this cavern to safety.<br />
 											Complete with 9 Levels of varying difficulty to test your skills and your patience.</p>
